discussion/kv_engine/160647/160647_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-48120: Move MagmaDbStats to ep-engine_magma

To share the class with magma move MagmaDbStats to ep-engine_magma.
This allows magma to re-use the class and avoid having a copy of it.

Change-Id: I7dba3caaed3f8f6a3a54f7c5852a3a65de0e1b21

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-09-03 12:24:47.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-09-03 12:28:53.000000000
Message: 
Patch Set 4: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13577/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39392/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\magma\util/kvengine.h(77): error C2039: "stats": is not a member of "MagmaDbStats" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/39392/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11966/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:15:12: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    json = nlohmann::json{{"docCount", std::to_string(dbStats.docCount)},
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:20:37: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    dbStats.docCount = std::stoull(j.at("docCount").get<std::string>());
                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:22:22: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        std::stoull(j.at("purgeSeqno").get<std::string>()));
                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:44:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    nlohmann::json j = *this;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:49:20: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    nlohmann::json j;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:51:23: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
        j = nlohmann::json::parse(encoded);
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:52:30: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    } catch (const nlohmann::json::exception& e) {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:59:30: error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
    } catch (const nlohmann::json::exception& e) {
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11966/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:15:12:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11966/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33551/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/magma-kvstore/shared/magma-kvstore_magma_db_stats.cc:15:12:
error: implicit instantiation of undefined template "nlohmann::basic_json<std::map, std::vector, std::__cxx11::basic_string<char>, bool, long, unsigned long, double, std::allocator, adl_serializer>"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33551/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1628/ : FAILURE

Compile error at [2021-09-03T12:28:18.089Z] ../magma/util/kvengine.h:77:42:
error: ?using KVEngineUserStats = class MagmaDbStats? {aka ?class MagmaDbStats?} has no member named ?stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1628/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1609/ : FAILURE

Compile error at [2021-09-03T12:25:58.414Z] ../magma/util/kvengine.h:77:42:
error: no member named "stats" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1609/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14244/ : FAILURE

Compile error at [2021-09-03T12:25:45.989Z] ../magma/util/kvengine.h:77:42:
error: no member named "stats" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/14244/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13815/ : FAILURE

Compile error at [2021-09-03T12:25:43.260Z] ../magma/util/kvengine.h:77:42:
error: ?using KVEngineUserStats = class MagmaDbStats? {aka ?class MagmaDbStats?} has no member named ?stats?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13815/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12724/ : FAILURE

Compile error at [2021-09-03T12:26:18.935Z] ../magma/util/kvengine.h:77:42:
error: no member named "stats" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12724/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21755/ : FAILURE

Compile error at [2021-09-03T12:25:56.393Z] ../magma/util/kvengine.h:77:42:
error: no member named "stats" in "MagmaDbStats"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21755/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10749/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
